# stack-score

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: technologies.json
src/stack_score/: __init__.py  __main__.py  cli.py  compatibility.py  cve_check.py  database.py  scorer.py  suggestions.py
src/stack_score/formatters/: json_fmt.py  table.py
tests/: test_database.py  test_scorer.py
