[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-score"
version = "1.0.1"
description = "Rate any tech stack before you build. Curated scoring database, offline, zero API calls."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "NOUMENON", email = "hello@noumenon.ai"}]
keywords = ["tech-stack", "scoring", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
stack-score = "stack_score.cli:app"

[project.urls]
Homepage = "https://github.com/noumenon-ai/stack-score"
Repository = "https://github.com/noumenon-ai/stack-score"

[tool.setuptools.packages.find]
where = ["src"]
